# cuda_testprj

./: CMakeLists.txt  common.h  device_prob.cu  device_prob.cuh  main.cu  nestedHelloWorld.cu  reduceInteger.cu  sumArray_timer.cu  sumArray_timer.cuh  testNvprof.cu
chapter3/: newNestedHelloWorld.cu  newNestedHelloWorld.cuh  sumArrayZeroCopy.cu  sumArrayZeroCopy.cuh  useVolatileSync.cu  useVolatileSync.cuh
chapter4/: gloablVariable.cu  gloablVariable.cuh  memTransfer.cu  pinMemTransfer.cu  readWriteSegment.cu  readWriteSegmentUnroll.cu  simpleMathAoS-align.cu  simpleMathAoS-x.cu  sumArrayZerocpy-offset.cu  sumArrayZerocpyUVA-offset.cu
chapter5/: checkSmemSquare.cu  sharedMemoryTest.cu  sharedMemoryTest.cuh
